[project]
name = "komoe-devtools"
version = "0.5.dev4"
description = ""
authors = [
    {name = "Louis DEVIE",email = "louisdevie.contact@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "komoe_devtools", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
