[project]
name = "komoe-sass"
version = "0.1.0"
description = ""
authors = [
    {name = "Louis DEVIE",email = "louisdevie.contact@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.entry-points.komoe-plugins]
sass = 'komoe-sass'

[tool.poetry]
packages = [{include = "komoe_sass", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
