[project]
name = "komoe-test-plugins"
version = "0.5.dev2"
description = ""
authors = [
    { name = "Louis DEVIE", email = "louisdevie.contact@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
]

[project.entry-points.komoe_plugins]
test_module = 'test_plugins.plugin_functions'

[tool.poetry]
packages = [{ include = "test_plugins" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
